envoy-front/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 3451 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 1234 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/retry" }
                route:
                  cluster: egress_service
                  timeout: 20s
#                  retry_policy:
#                    retry_on: 5xx
#                    num_retries: 5
#                    per_try_timeout: 4s
              - match: { prefix: "/" }
                route:
                  cluster: ingress_service
                  timeout: 20s
          http_filters:
          - name: envoy.router
  clusters:
  - name: egress_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
#    circuit_breakers:
#      thresholds:
#      - priority: DEFAULT
#        max_connections: 3
    load_assignment:
      cluster_name: retry_app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 240.10.0.2
                port_value: 4321
  - name: ingress_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
#    circuit_breakers:
#      thresholds:
#      - priority: DEFAULT
#        max_connections: 3
#        max_pending_requests: 1
    load_assignment:
      cluster_name: app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 240.10.0.9
                port_value: 80
